# sponsor-sync

./: Cargo.toml  readme.md  rustfmt.toml
.github/workflows/: linux.yml
sql/: down.sql
sql/00_sponsor_time/: down.sql  up.sql
sql/01_sponsor_time_video_id_idx/: up.sql
sql/sponsor_time/: up.sql
sql/sponsor_time_video_id_idx/: down.sql
src/: app.rs  args.rs  consts.rs  db.rs  http.rs  indexes.rs  main.rs  paths.rs  sponsor_time.rs  sponsor_time_error.rs  sponsor_times.rs
