[package]
name = "sponsor-sync"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "2.34"
dirs = "4.0"
log = "0.4"
env_logger = "0.9"
futures-util = "0.3"

[dependencies.sqlx]
version = "0.5"
features = [
    "runtime-tokio-native-tls",
    "postgres",
]

[dependencies.tokio]
version = "1.15"
features = [
    "full",
]

[dependencies.reqwest]
version = "0.11"
features = [
    "stream",
]